# dashboard-indicadores

./: .env.example  .gitattributes  .gitignore  .releaserc  CHANGELOG.md  README.md  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: release-pipeline.yaml
api/: .env.example  Dockerfile  Dockerfile.dev  nest-cli.json  package-lock.json  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: app.module.ts  main.ts
database/: Dockerfile  docker-compose.yml  import_data.sql  import_seeds.sql  schema.sql  seed_indicadores.sql  seed_resultados.sql  seed_tipo_de_unidade.sql  seed_unidades.sql
database/seeds/: superintendencias.csv  tabela_indicadores.csv  tabela_indicadores_meta.csv  tipo_de_unidade.csv  unidades.csv
database/sql/: seed_indicador_tipo_de_unidade.sql  seed_indicadores.sql  seed_superintendencia.sql  seed_unidades.sql  (+1 more)
script/import_database/: __main__.py  pyproject.toml
script/sync_datasus/: __main__.py  pyproject.toml
script/sync_datasus/data/: SIA_MA_2025_04.parquet  SIH_MA_2024_01.parquet  SIH_MA_2024_02.parquet  SIH_MA_2024_03.parquet  SIH_MA_2024_04.parquet  SIH_MA_2024_05.parquet  SIH_MA_2024_06.parquet  SIH_MA_2024_07.parquet  SIH_MA_2024_08.parquet  SIH_MA_2024_09.parquet  SIH_MA_2024_10.parquet  SIH_MA_2024_11.parquet  SIH_MA_2024_12.parquet  SIH_MA_2025_01.parquet  SIH_MA_2025_02.parquet  SIH_MA_2025_03.parquet  SIH_MA_2025_04.parquet  SIH_MA_2025_06.parquet  SIH_MA_2025_07.parquet  SIH_MA_2025_08.parquet  SIH_MA_2025_09.parquet  SIH_MA_2025_10.parquet  SIH_MA_2025_11.parquet  SIH_MA_2025_12.parquet
(+137 files in other folders)
