[project]
name = "database-importer"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Eduardo",email = "pabloeduardossantos@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
